Update stylesheet and script references in MR.html

--- a/MR.html
+++ b/MR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="MR.css">
   <title>Mood Ring</title>
 </head>
 <body>
@@ -9,6 +9,6 @@
     <div class="stone" id="stone"></div>
   </div>
   <h1>How are you feeling</h1>
-  <script src="script.js"></script>
+  <script src="MR.js"></script>
 </body>
 </html>
